service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service-prod
  labels:
    app: sample-app
spec:
  selector:
    app: sample-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
