route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-route
  labels:
    app: sample-app
spec:
  to:
    kind: Service
    name: sample-service
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
